--- a/newProfileBook/newProfileBook/RESX/AppResources.ru.resx
+++ b/newProfileBook/newProfileBook/RESX/AppResources.ru.resx
@@ -147,6 +147,9 @@
   <data name="Login" xml:space="preserve">
     <value>Логин</value>
   </data>
+  <data name="LoginStartsWithNumber" xml:space="preserve">
+    <value>Пароль должен иметь хотя бы одну цифру</value>
+  </data>
   <data name="MainListPage" xml:space="preserve">
     <value>Главная Страница</value>
   </data>
@@ -161,6 +164,18 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
+  </data>
+  <data name="PasswordIsTooLong" xml:space="preserve">
+    <value>Пароль слишком длинный</value>
+  </data>
+  <data name="PasswordIsTooShort" xml:space="preserve">
+    <value>Пароль слишком короткий</value>
+  </data>
+  <data name="PasswordIsWeak" xml:space="preserve">
+    <value>Пароль должен иметь хотя бы одну  большую букву и одну цифру</value>
+  </data>
+  <data name="PasswordsAreNotEqual" xml:space="preserve">
+    <value>Пароль не совпадает</value>
   </data>
   <data name="register" xml:space="preserve">
     <value>Зарегистрироваться</value>
@@ -185,6 +200,9 @@
   </data>
   <data name="SortProfiles" xml:space="preserve">
     <value>Сортирка пользователей</value>
+  </data>
+  <data name="Success" xml:space="preserve">
+    <value>Регистрация успешна</value>
   </data>
   <data name="Theme" xml:space="preserve">
     <value>Изменить Тему</value>
